--- a/apache_spark/prototypes/ASLogAnalyzer/pom.xml
+++ b/apache_spark/prototypes/ASLogAnalyzer/pom.xml
@@ -24,52 +24,167 @@
         </pluginRepository>
     </pluginRepositories>
 
-    <build>
 
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-
-    <dependencies>
+    <profiles>
+        <profile>
+            <id>localsn</id>
+            <build>
 
 
-        <dependency> <!-- log4j API -->
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-api</artifactId>
-                <version>2.1</version>
-        </dependency>
-        <dependency> <!-- log4j core implementation -->
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-core</artifactId>
-                <version>2.1</version>
-        </dependency>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.3.2</version>
+                        <configuration>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                        </configuration>
+                    </plugin>
 
-        <dependency> <!-- log4j IO streams to redirect data written to output stream or writer to log4j-->
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-iostreams</artifactId>
-            <version>2.1</version>
-        </dependency>
 
-        <dependency> <!-- jUnit dependency -->
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.1</version>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo>Using env.test.properties</echo>
+                                        <copy file="src/main/resources/env.localsn.properties" tofile="${project.build.outputDirectory}/env.properties"/>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
 
-        <dependency> <!-- Spark -->
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-    </dependencies>
+            <dependencies>
+
+
+                <dependency> <!-- log4j API -->
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-api</artifactId>
+                    <version>2.1</version>
+                </dependency>
+                <dependency> <!-- log4j core implementation -->
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-core</artifactId>
+                    <version>2.1</version>
+                </dependency>
+
+                <dependency> <!-- log4j IO streams to redirect data written to output stream or writer to log4j-->
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-iostreams</artifactId>
+                    <version>2.1</version>
+                </dependency>
+
+                <dependency> <!-- jUnit dependency -->
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                    <version>4.11</version>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency> <!-- Spark -->
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-core_2.10</artifactId>
+                    <version>1.2.0</version>
+                </dependency>
+
+
+            </dependencies>
+
+
+        </profile>
+
+
+        <profile>
+            <id>localmn</id>
+            <build>
+
+
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>2.3.2</version>
+                        <configuration>
+                            <source>1.8</source>
+                            <target>1.8</target>
+                        </configuration>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.1</version>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo>Using env.test.properties</echo>
+                                        <copy file="src/main/resources/env.localmn.properties" tofile="${project.build.outputDirectory}/env.properties"/>
+                                    </tasks>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+
+
+
+            </build>
+
+            <dependencies>
+
+
+                <dependency> <!-- log4j API -->
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-api</artifactId>
+                    <version>2.1</version>
+                </dependency>
+                <dependency> <!-- log4j core implementation -->
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-core</artifactId>
+                    <version>2.1</version>
+                </dependency>
+
+                <dependency> <!-- log4j IO streams to redirect data written to output stream or writer to log4j-->
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-iostreams</artifactId>
+                    <version>2.1</version>
+                </dependency>
+
+                <dependency> <!-- jUnit dependency -->
+                    <groupId>junit</groupId>
+                    <artifactId>junit</artifactId>
+                    <version>4.11</version>
+                    <scope>test</scope>
+                </dependency>
+
+                <dependency> <!-- Spark -->
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-core_2.10</artifactId>
+                    <version>1.2.0</version>
+                </dependency>
+
+
+
+            </dependencies>
+
+        </profile>
+    </profiles>
+
+
 </project>
